After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 644806 - Multipage TIFF problem (Fax document)
Multipage TIFF problem (Fax document)
Status: RESOLVED FIXED
Product: evince
Classification: Core
Component: general
2.32.x
Other Linux
: Normal normal
: ---
Assigned To: Evince Maintainers
Evince Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-03-15 09:57 UTC by Timpoldo
Modified: 2011-04-30 10:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Test - Multipage Tiff File (42.10 KB, image/tiff)
2011-03-15 09:59 UTC, Timpoldo
  Details
Proposed patch (1.21 KB, patch)
2011-04-29 23:56 UTC, Juanjo Marín
committed Details | Review

Description Timpoldo 2011-03-15 09:57:15 UTC
Hi.
I've a problem with Evince. I'm running Evince 2.32.0, on Ubuntu 10.10 machine.
My problem is with a multipage Tiff file, written by a Fax software running on an XP machine.

The trouble is that Evince open it, shows that is a multipage file... but the page are fully black. Nothing appears in its content.

Atteche a sample tiff file (2 pages) which i cannot display. (Default image Viewer in Windows XP, open this file normally)

Any ideas? Is available an update to solve this problem?

Thanks in advance.
Comment 1 Timpoldo 2011-03-15 09:59:17 UTC
Created attachment 183412 [details]
Test - Multipage Tiff File
Comment 2 Christian Persch 2011-03-15 12:17:31 UTC
File appears to be not valid:

Fax3Decode1D: Warning, /tmp/test_multi_tiff.tif: Premature EOL at line 2268 of strip 0 (got 0, expected 1728).
Comment 3 Juanjo Marín 2011-03-15 23:29:58 UTC
Gimp is able to open too. 

We need to check out if the problem is on Evince or if we should report a bug to libtiff.
Comment 4 Timpoldo 2011-03-16 08:32:50 UTC
Also Openoffice-Draw opens the file. But only first page :-(


(In reply to comment #3)
> Gimp is able to open too. 
> 
> We need to check out if the problem is on Evince or if we should report a bug
> to libtiff.
Comment 5 José Aliste 2011-03-16 10:40:56 UTC
I confirm that this is a bug in libtiff (in the case the file is valid). Please forward the bug to them.
Comment 6 Juanjo Marín 2011-03-17 07:32:39 UTC
Because Gimp also uses libtiff, it makes me think about a problem in Evince processing a conflict¡ng/malformed tiff document.
Comment 7 Juanjo Marín 2011-04-29 23:56:31 UTC
Created attachment 186915 [details] [review]
Proposed patch

Set stopOnError to zero on TIFFReadRGBAImageOriented() calls. This allows overlooking errors and processing malformed tiff files produced by buggy programs.
Comment 8 Carlos Garcia Campos 2011-04-30 10:17:54 UTC
Review of attachment 186915 [details] [review]:

Pushed to git master. thanks!
Comment 9 Timpoldo 2011-04-30 10:39:55 UTC
Thanks a lot!