tiff: Set stopOnError to zero on TIFFReadRGBAImageOriented() calls

This allows overlooking errors and processing malformed tiff files.

Taken from evince commit: 2f2b0dbbf86b3b0def86c78e27f7e530e4041308
From: Juanjo Marín <juanj.marin@juntadeandalucia.es>
Gnome bug: https://bugzilla.gnome.org/show_bug.cgi?id=644806